--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
+ - Write BString::Bstring and ::set which duplicates other BStrings.
+ - Move inlines from bstring.h to bstring_inlines.h
  - Add a comment at the start of each function describing what it does.
